# lmtk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEMO.md  Doxyfile  LICENSE  README.md  config.cmake.h.in  vcpkg.json  vcpkg_rf.txt
.github/workflows/: build-linux.yml  build-windows.yml
data/audio/test/: .gitignore
doc/: README
doc/html/: annotated.html  audiofilter_8h.html  audiofilter_8h_source.html  audioplayer_8h.html  audioplayer_8h_source.html  audiotrack_8h.html  audiotrack_8h_source.html  bokehblur_8h.html  bokehblur_8h_source.html  boxblur_8h.html  boxblur_8h_source.html  chromakeyer_8h.html  chromakeyer_8h_source.html  class_audio_filter-members.html  class_audio_filter.html  class_audio_player-members.html  class_audio_player.html  class_audio_track-members.html  class_audio_track.html  class_low_pass_filter-members.html  class_low_pass_filter.html  class_saw_tooth_wave-members.html  class_saw_tooth_wave.html  class_sine_wave-members.html  class_sine_wave.html  class_square_wave-members.html  class_square_wave.html  class_wave_generator-members.html  class_wave_generator.html  classaudio_1_1_audio_filter-members.html  classaudio_1_1_audio_filter.html  classaudio_1_1_audio_player-members.html  classaudio_1_1_audio_player.html  classaudio_1_1_audio_track-members.html  classaudio_1_1_audio_track.html  classaudio_1_1_f_l_a_c-members.html  classaudio_1_1_f_l_a_c.html  classaudio_1_1_f_l_a_c_1_1_f_l_a_c_decoder-members.html  classaudio_1_1_f_l_a_c_1_1_f_l_a_c_decoder.html  classaudio_1_1_low_pass_filter-members.html  (+242 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  (+55 more)
doc/latex/: annotated.tex  audiofilter_8h.tex  audiofilter_8h_source.tex  audioplayer_8h.tex  audioplayer_8h_source.tex  audiotrack_8h.tex  audiotrack_8h_source.tex  bokehblur_8h.tex  bokehblur_8h_source.tex  boxblur_8h.tex  boxblur_8h_source.tex  chromakeyer_8h.tex  chromakeyer_8h_source.tex  class_audio_filter.eps  class_audio_filter.tex  class_audio_player.tex  class_audio_track.eps  class_audio_track.tex  class_low_pass_filter.eps  class_low_pass_filter.tex  class_saw_tooth_wave.eps  class_saw_tooth_wave.tex  class_sine_wave.eps  class_sine_wave.tex  class_square_wave.eps  class_square_wave.tex  class_wave_generator.eps  class_wave_generator.tex  classaudio_1_1_audio_filter.eps  classaudio_1_1_audio_filter.tex  classaudio_1_1_audio_player.tex  classaudio_1_1_audio_track.eps  classaudio_1_1_audio_track.tex  classaudio_1_1_f_l_a_c.eps  classaudio_1_1_f_l_a_c.tex  classaudio_1_1_f_l_a_c_1_1_f_l_a_c_decoder.eps  classaudio_1_1_f_l_a_c_1_1_f_l_a_c_decoder.tex  classaudio_1_1_low_pass_filter.eps  classaudio_1_1_low_pass_filter.tex  classaudio_1_1_saw_tooth_wave.eps  (+151 more)
include/: .gitignore
src/: CMakeLists.txt
src/app/: CMakeLists.txt  LMTKimage.cpp
src/app/imagetools/: imagefx.cpp  imagefx.hpp  progressbar.cpp  progressbar.h  renderer.cpp  renderer.h
src/libLMTKaudio/: CMakeLists.txt  audiofilter.cpp  audiofilter.h  audioplayer.cpp  audioplayer.h  audiotrack.cpp  audiotrack.h  flac.cpp  flac.h  lowpassfilter.cpp  lowpassfilter.h  main.cpp  musicnote.h  sawtooth.cpp  sawtooth.h  sinewave.cpp  sinewave.h  squarewave.cpp  squarewave.h  wavegenerator.h
src/libLMTKimage/: CMakeLists.txt  blur.h  bokehblur.cpp  bokehblur.h  boxblur.cpp  boxblur.h  chromakeyer.cpp  chromakeyer.h  color.cpp  color.h  colorinvert.cpp  colorinvert.h  convolution.cpp  convolution.h  filters.h  gaussianblur.cpp  gaussianblur.h  grayscale.cpp  grayscale.h  hslapixel.cpp  hslapixel.h  hslcolor.h  huesatlum.cpp  huesatlum.h  image.cpp  image.h  imagefile.h  imageshader.cpp  imageshader.h  jpeg.cpp  jpeg.h  main.cpp  pluginchain.cpp  pluginchain.h  png.cpp  png.h  rgbapixel.cpp  rgbapixel.h  rgbcolor.h  rotate.cpp  (+7 more)
src/libLMTKvideo/: .gitignore
src/utils/: CMakeLists.txt  fft.cpp  fft.h  file.cpp  file.h  threadpool.cpp  threadpool.h  timer.cpp  timer.h  utils.cpp  utils.h  utilsmath.cpp  utilsmath.h  utilsstring.cpp  utilsstring.h
test/: .gitignore  CMakeLists.txt  README
test/test_libLMTKaudio/: CMakeLists.txt  audiotest.h  audiotracktest.cpp
test/test_libLMTKimage/: .gitignore  CMakeLists.txt  funtests.cpp  hslapixeltest.cpp  imageshadertest.cpp  imageshadertest.h  imagetest.cpp  imagetest.h  jpegtest.cpp  pngtest.cpp  rgbapixeltest.cpp
test/test_utils/: CMakeLists.txt  ffttest.cpp  ffttest.h  utilstest.cpp  utilstest.h
